fixed alignments

--- a/src/Views/Contacts/Contacts.css
+++ b/src/Views/Contacts/Contacts.css
@@ -1,5 +1,5 @@
 .contact-body{
-    height:240px;
+    height:230px;
     width:100%;
     background: rgb(160, 151, 132);
     opacity: .70;
